iris/src/main/webapp/IrisStyles/Universal/items.css
/* ... */
/*Bug 186824 make sure instrucitons area in one column doesn't have too little padding on touch devices*/
.touch .noColumns .theQuestions .padding .instructions{
	padding-top: 40px;
}

/* @group ETS hacks */
.ets-fraction_entry {
	display: inline-block;
}
.ets-fraction_entry div[id*="numerator"] {
	border-bottom: solid 2px red;
	padding-bottom: 2px;
	margin-bottom: 2px;
}
.ets-math_expression img {
	vertical-align: middle;
}
.ets-item-stem {
	margin-bottom: 1em;
}
/* @end */

/* @group Item Badges */

.tds-badges {
  float: left;
  margin-top: -1.2em;
  margin-left: .5em;
}
.layoutColumnLeft .tds-badges {
  margin-left: 2em;
}
.tds-badges .badge {
  display: none;
  position: relative;
  height: 1em;
  width: 1.5em;
  margin-right: 3px;
  overflow: hidden;
  float: left;
  color: transparent;
}

.tds-badges .badge::before,
.tds-badges .badge::after {
  font-family: 'icomoon';
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin: 0px;
  position: absolute;
  width: 100%;
  height: 1.5em;
  top: 0;
  left: 0;
  content: ' ';
  display: block;
  font-size: 1em;
  line-height: 1em;
  text-align: center;
  z-index: 1;
}

.tds-badges .badge::after {
  content: '\e628';
  color: #00a651;
  z-index: 2;
  font-size: .5em;
  text-align: right;
  line-height: 3em;
  text-shadow: -1px -1px 0 #fff,
}

.tds-badges .badge::before {
  color:#666;
  z-index: 1;
  /*font-size: 15px;*/
}

.tds-badges .badge.marked::before {
  content: '\e62a';
}

.tds-badges .badge.printed::before {
  content: '\e61c';
}

.tds-badges .badge.notes::before {
  content: '\e620';
}

.tds-badges .badge.embossed::before {
  content: '\e90c';
}

.tds-badges .badge.unlocked::before {
  content: '\e90d';
  color: #008a43;
}

.tds-badges .badge.locked::before {
  content: '\e90a';
  color: #9c0f17;
}

.tds-badges .badge.locked::after,
.tds-badges .badge.unlocked::after {
  display: none;
}

.tds-badges .badge:hover {
  overflow: visible;
  background-color: #59d0ff;
  color: #fff;
  border-bottom: solid 2px #59d0ff;
  margin-bottom: -2px;
  -moz-transition: background-color .2s ease-in;
  -webkit-transition: background-color .2s ease-in;
  transition: background-color .2s ease-in;
  -webkit-box-shadow: 0px 0px 2px #b4b4b4;
  -moz-box-shadow: 0px 0px 2px #b4b4b4;
  box-shadow: 0px 0px 2px #b4b4b4;
}
.tds-badges .badge:focus {
  overflow: visible;
  -webkit-box-shadow: 0px 0px 2px #b4b4b4;
  -moz-box-shadow: 0px 0px 2px #b4b4b4;
  box-shadow: 0px 0px 2px #b4b4b4;
}

.tds-badges .badge:hover::before {
  color: #fff;
}
.tds-badges .badge .label {
  opacity: 0;
}
.tds-badges .badge:hover .label {
  display: block;
  text-indent: 0px;
  position: absolute;
  top: -1.2em;
  white-space: nowrap;
  background-color: #59d0ff;
  padding: .1em;
  left: -1em;
  -moz-transition: background-color .2s ease-in;
  -webkit-transition: background-color .2s ease-in;
  transition: background-color .2s ease-in;
  -webkit-box-shadow: 0px 0px 2px #b4b4b4;
  -moz-box-shadow: 0px 0px 2px #b4b4b4;
  box-shadow: 0px 0px 2px #b4b4b4;
  opacity: 1;
}
.tds-badges .badge:focus .label {
  display: block;
  text-indent: 0px;
  position: absolute;
  top: -1.2em;
  white-space: nowrap;
  background-color: #59d0ff;
  color: #fff;
  padding: .1em;
  left: -1em;
  -moz-transition: background-color .2s ease-in;
  -webkit-transition: background-color .2s ease-in;
  transition: background-color .2s ease-in;
  -webkit-box-shadow: 0px 0px 2px #b4b4b4;
  -moz-box-shadow: 0px 0px 2px #b4b4b4;
  box-shadow: 0px 0px 2px #b4b4b4;
  animation: fadeLabel 3s;
  animation-delay: 0s;
  animation-timing-function: ease-out;
  animation-direction: normal;
}
@keyframes fadeLabel {
  0% {
    opacity: 1;
  }
  98% {
    opacity: 1;
  }
  99% {
    opacity: 0;
  }

}

.tds-badges .badge.enabled {
	display: block;
}
/* zoomimg */
.TDS_PS_L3 .tds-badges {
  font-size: .9em
}
.TDS_PS_L4 .tds-badges {
  font-size: .7em
}
/* colors */
.TDS_CCInvert .badge::before,
.TDS_CCWhiteN .badge::before {
  color: #fff;
}
.TDS_CCInvert .badge::after,
.TDS_CCWhiteN .badge::after {
  text-shadow: inherit;
  color: #d7c604;
}
.TDS_CCInvert .badge:hover .label,
.TDS_CCWhiteN .badge:hover .label,
.TDS_CCInvert .badge:hover,
.TDS_CCWhiteN .badge:hover{
  background-color: #666;
  border-bottom-color: #666;
}
.TDS_CCYellowB .badge::before {
  color: #fc0;
}
.TDS_CCYellowB .badge:hover .label,
.TDS_CCYellowB .badge:hover {
  background-color: rgba(1,71,252,1);
  border-bottom-color: rgba(1,71,252,1);
  color: #fc0;
}

/* @end */

/* TDS-81 collapse area of option to avoid accidental selection on scroll with tablets */
.touch .optionsContainer .optionsGroup {
  float: left;
  clear: both;
}
/* TDS-1340 :: Cancel the above change if ASL mode is on as it was breaking display of the optionGroup*/ 
.modeEnabled.touch .optionsContainer .optionsGroup{
	float:none;
}

.touch .iat-ebsr-header,
.touch .iat-interaction-container,
.touch .format_ebsr .interactionContainer {
  clear: both;
}
.touch .optionContainer {
  float: left;
}
.touch .optionsGroup .optionContainer {
  float: none;
}
.touch .optionsContainer::after,
.touch .format_ebsr .interactionContainer::after {
  visibility: hidden;
  display: block;
  font-size: 0;
  content: " ";
  clear: both;
  height: 0;
}
.touch .optionsContainer .optionSound {
  clear: left;
}

/* SB-142 allow touch interactions for Surface devices */
.answerCell, 
.answerContainer,
.iat-interaction-container, 
.qti-interaction {
	touch-action: none;
	-ms-touch-action:none;
}

